# mycpplib

./: AUTHORS  Doxyfile  Makefile.am  README.md  TODO  configure.ac  mycpplib.pc.in
src/mycpplib/: .Makefile.am.swp  Makefile.am  config.hpp.in  preprocessor.hpp
src/mycpplib/.backups/: preprocessor.hpp.swp
test/: Makefile.am  default_flags_to_configure.build  header_app_test.cpp  header_config_test.cpp  header_http_entity_config_test.cpp  header_preprocessor_test.cpp  header_transmission_test.hpp
test/.backups/: header_preprocessor_test.cpp.swp
test/ws-gsoap/server/: soapClient.cpp  soapClientLib.cpp  soapSentidoDaVidaProxy.h
